--- a/src/CodigosHtml/home/SubirGithub.html
+++ b/src/CodigosHtml/home/SubirGithub.html
@@ -87,7 +87,7 @@
       .
       <br />
       <br />
-      5. GitHub mostrará un mensaje como este:
+      npm run dev 5. GitHub mostrará un mensaje como este:
       <br />
       <br />
       <code>
