--- a/src/CodigosHtml/home/SubirGithub.html
+++ b/src/CodigosHtml/home/SubirGithub.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../style.css">
     <style>
-      body {
-        background-color: bisque;
-      }
+  
       .img {
         width: 600px;
         margin: 4em;
@@ -23,7 +22,16 @@
     <title>ELEMENTOS RÁPIDOS</title>
   </head>
   <body>
-    <h1>Subir un Proyecto a GitHub</h1>
+    <h1>GITHUB</h1>
+<ol>
+  <li class="li"><a href="#1">Subir Proyecto a GitHub</a></li>
+  <li class="li"><a href="#2">Deploy en GitHub</a></li>
+  <li class="li"><a href="#3">Eliminar un Proyecto de Github</a></li>
+  <li class="li"><a href="#4"></a></li>
+</ol><br><br><hr>
+<!-- /////////////////////////////////////////////////// -->
+ <section id="1">
+    <h3>Subir un Proyecto a GitHub</h3>
     <ol>
       <li>git init</li>
       <li>git add .</li>
@@ -42,8 +50,12 @@
     <div>
     </div>
   </pre>
+  
+    </p>
+ </section>
+ <section id="2">
     <p class="text">
-      ¡ Cómo hacer deploy de tu proyecto con GitHub Pages
+      <H2>Cómo hacer deploy de tu proyecto con GitHub Pages</H2>
       <br />
       <br />
       Paso a paso:
@@ -87,7 +99,7 @@
       .
       <br />
       <br />
-      npm run dev 5. GitHub mostrará un mensaje como este:
+   5. GitHub mostrará un mensaje como este:
       <br />
       <br />
       <code>
@@ -133,6 +145,20 @@
       en activarse. Si visitas el enlace y no carga, espera un poco y vuelve a
       probar.
       <br />
-    </p>
+ </section>
+ <!-- ////////////////////////////////////////////// -->
+  <section id="3">
+    <h3>Eliminar un Proyecto de Github</h3>
+    A. Eliminar un repositorio completo en GitHub<br>
+1. Inicia sesión en GitHub y ve al repositorio que quieres eliminar.<br>
+2. Haz clic en “Settings” (configuración) en la barra lateral derecha.<br>
+3. Desplázate hasta la sección “Danger Zone” (Zona de peligro).<br>
+4. Haz clic en “Delete this repository” (Eliminar este repositorio).<br>
+5. Se te pedirá que escribas el nombre del repositorio para confirmar. Escríbelo exactamente y confirma.<br>
+6. Si tienes dos factores de autenticación (2FA) activados, se te pedirá ingresar un código de verificación.<br>
+7. Confirma la eliminación. El repositorio se eliminará de forma permanente (no se puede deshacer).<br>
+
+  </section>
+  
   </body>
 </html>
